k8s/manifests/grafana/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: gateway-route-grafana
  namespace: grafana
spec:
  parentRefs:
    - name: envoy-gateway
      namespace: envoy-gateway
      sectionName: grafana
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: "/"
      backendRefs:
        - name: grafana
          port: 80
